test/tests/operators/to_google_secops/ingestion_udm.txt
error: `api="ingestion"` is only valid when `mode="raw_log"`
 --> tests/operators/to_google_secops/ingestion_udm.tql:6:55
  |
6 | to_google_secops _dry_run=true, mode="udm_event", api="ingestion"
  |                                                       ^^^^^^^^^^^ 
  |
